# dG-prediction-of-aldehyde-to-benzoin-products

./: .gitattributes  .gitignore  ARCHITECTURE.md  BDE_prediction.md  FILE_MAP.md  IMPLEMENTATION_REPORT_20260720.md  LICENSE  README.md  SECURITY.md  SLURM_FIXES.md  STATUS.md  mlflow_benchmark.db  pyproject.toml
cross_benzoin/: ARCHITECTURE.md  add_mordred_cross_products.py  analyze_gnn_stack_uncertainty.py  architecture_ensemble_experiment.py  assemble_cross_round2_features.py  assemble_cross_round_features.py  assemble_cross_training_table.py  assemble_cross_training_table_combined.py  assemble_cross_training_table_combined_v2.py  assemble_cross_training_table_unified.py  assemble_cross_training_table_unified_v2.py  assemble_cross_training_table_v3.py  build_homo_for_unification.py  cb_featurize.py  check_aldehyde_cache_coverage.py  gnn3d_bootstrap_compare.py  gnn3d_bootstrap_compare_v2.py  gnn3d_extract_product_coords.py  gnn3d_extract_product_geometry.py  gnn3d_train_and_compare.py  gnn3d_train_and_compare_v2.py  gnn_architectures.py  learning_curve_check.py  learning_curve_check_ensemble.py  merge_round8_products.py  merge_round9_products.py  predict_cross_champion.py  prepare_pair_chunks.py  prepare_product_manifest.py  quick_cv_compare.py  rebuild_scaffold_disjoint_split.py  rebuild_scaffold_disjoint_split_v2.py  relabel_scaffold_split_8rounds.py  relabel_scaffold_split_9rounds.py  sample_from_candidates_v3.py  sample_round10_from_candidates_v3.py  sample_round3_from_candidates_v3.py  sample_round8_from_candidates_v3.py  sample_round9_from_candidates_v3.py  score_round2_active_learning.py  (+13 more)
data/: benzoin_dG_project_context.md  featurize_pre_aromatic.parquet.bak
figs/: NARRATIVE_conformer_xtb_dft_4figs_20260629.md  NARRATIVE_conformer_xtb_dft_4figs_20260629_EN.md
pipeline/: RUNBOOK_v6_products.md  analyze_benzoin_deep.py  analyze_energies.py  analyze_outliers.py  analyze_rejected_v4.py  gxtb_ab.py  (+41 more)
(+3093 files in other folders)
